Release 0.0.4 (in development)
==============================

* NEW :ref:`export_delete_tree`
* renamed export_as_json as export_as_fixtures
    - added foreign_keys dumps
    - multiple serializer
* NEW: :ref:`transform_operations`
* NEW: url to preview date format in `export_as_csv`


Release 0.0.3
=============

* added demo project


Release 0.0.2
=============

* name changed from django-actions to django-adminactions


Release 0.0.1
=============

* first relase